tests/lang/compile_fail/binary_ptr_removed.kojs
bytes = "abc".to_binary()
p = bytes.ptr()
